kubernetes/apps/cloudnativepg/dev-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnpg-dev-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    cert-manager.io/cluster-issuer: 70ld-ss-cert-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: cnpg-dev.70ld.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgres-dev-rw-svc
                port:
                  number: 5432
  tls:
    - hosts:
        - cnpg-dev.70ld.home
      secretName: cnpg-dev-ingress-ss-cert
